testdata/baselines/reference/submodule/compiler/argumentsReferenceInConstructor5_Js.errors.txt
/a.js(9,13): error TS8010: Type annotations can only be used in TypeScript files.


==== /a.js (1 errors) ====
    const bar = {
    	arguments: {}
    }
    
    class A {
    	/**
    	 * Constructor
    	 *
    	 * @param {object} [foo={}]
    	           ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    	 */
    	constructor(foo = {}) {
    		/**
    		 * @type object
    		 */
    		this.foo = foo;
    
    		/**
    		 * @type object
    		 */
    		this.bar = bar.arguments;
    	}
    }
    